--- a/fifteen/backend/Dockerfile
+++ b/fifteen/backend/Dockerfile
@@ -1,7 +1,17 @@
 FROM python:3.8-slim
+
+RUN apt-get update && \
+    apt-get install -y netcat && \
+    apt-get clean
+
 EXPOSE 5000
 WORKDIR /app
+
+COPY ./docker-entrypoint.sh .
+RUN chmod a+x ./docker-entrypoint.sh
+ENTRYPOINT ["./docker-entrypoint.sh"]
+CMD ["python", "main.py"]
+
 COPY requirements.txt /app/
 RUN pip install -r requirements.txt
 COPY main.py .
-CMD ["python", "main.py"]
