--- a/fifteen/docker-compose.yml
+++ b/fifteen/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   redis:
     image: redis:alpine
+    restart: always
   db:
     image: postgres:alpine
     container_name: db
@@ -15,6 +16,10 @@ services:
     environment:
       DB_HOST: db
       DB_PORT: 5432
+      DB_NAME: fifteen
+      DB_USER: fifteen
+      DB_PASSWORD: secret_password
+      DEBUG_MODE: "true"
     volumes:
       - ./backend:/app
     depends_on:
