--- a/fifteen/docker-compose.yml
+++ b/fifteen/docker-compose.yml
@@ -13,24 +13,19 @@ services:
     restart: always
   backend:
     build: ./backend
-    environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: fifteen
-      DB_USER: fifteen
-      DB_PASSWORD: secret_password
-      DEBUG_MODE: "true"
-    volumes:
-      - ./backend:/app
-    depends_on:
-      - redis
-      - db
+    environment: {DB_HOST: db, DB_PORT: 5432, DB_NAME: fifteen, DB_USER: fifteen, DB_PASSWORD: secret_password, DEBUG_MODE: 'true'}
+#      DB_HOST: db
+#      DB_PORT: 5432
+#      DB_NAME: fifteen
+#      DB_USER: fifteen
+#      DB_PASSWORD: secret_password
+#      DEBUG_MODE: "true"
+    volumes: [./backend:/app]
+    depends_on: [redis, db]
     restart: always
   frontend:
     build: ./frontend
-    volumes:
-      - node_modules:/app/node_modules
-      - ./frontend:/app
+    volumes: [node_modules:/app/node_modules, ./frontend:/app]
     environment:
       - CI=true
     restart: always
