--- a/docker-compose/part_2/docker-compose.yml
+++ b/docker-compose/part_2/docker-compose.yml
@@ -6,13 +6,11 @@ services:
     restart: always
   api:
     image: backend_app
-    build: ./backend
-    environment:
-      DEBUG_MODE: "true"
-    volumes:
-      - ./backend:/app
-    depends_on:
-      - redis
+    build:
+      context: ./backend
+      dockerfile: dev.Dockerfile
+      args:
+        version: 2020
     ports:
-      - "80:5000"
+      - '80:5000'
     restart: always
